--- a/index.html
+++ b/index.html
@@ -970,7 +970,7 @@
         <a-asset-item
           autoload
           id="cometronics"
-          src="assets/cometronics.glb"
+          src="assets/cometonics.glb"
         ></a-asset-item>
 
         <a-asset-item
@@ -1171,7 +1171,7 @@
     }
     @media only screen and (min-width: 900px) {
       .dev-overlay {
-        display: block;
+        display: none;
       }
       .user-overlay {
         display: none;
