--- a/index.html
+++ b/index.html
@@ -778,7 +778,7 @@
         }
       };
 
-      //doConnect(onMessage);
+      doConnect(onMessage);
 
       const onInput = (e) => onMessage({ TT_time: parseInt(e.target.value) });
 
